kubernetes-manifest/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-frontend-service
spec:
  type: ClusterIP
  selector:
    app: ecom-frontend-deployment
  ports:
    - name : http
      port : 80
      targetPort: 5000
