kubernetes-manifest/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fronend-ecom-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ecom.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ecom-frontend-service
            port:
              number: 80
